--- a/dev/html/culturetv/mainList.pug
+++ b/dev/html/culturetv/mainList.pug
@@ -17,93 +17,214 @@ block contents
                                     .visual-text-box
                                         strong.category 문화유산
                                         h3.title-h3 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
-                                        p.sub-txt [기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...
+                                        p.sub-txt.ellipsis.type02 [기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...
 
                                 .thumbnail-area.swiper-container
                                     ul.thumbnail-list.swiper-wrapper
-                                        li
-                                            button(type="button")
+                                        li.swiper-slide
+                                            a(href="" role="button")
                                                 .thumb-img
                                                     img(src="../../images/thumb_img.jpg", alt="")
-                                                .thumb-text
-                                                    strong.sub-category 공연/전시
-                                                    p.txt [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
-                                        li
-                                            button(type="button")
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
+                                        li.swiper-slide
+                                            a(href="" role="button")
                                                 .thumb-img
                                                     img(src="../../images/thumb_img.jpg", alt="")
-                                                .thumb-text
-                                                    strong.sub-category 공연/전시
-                                                    p.txt [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링2
-                                        li
-                                            button(type="button")
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링2
+                                        li.swiper-slide
+                                            a(href="" role="button")
                                                 .thumb-img
                                                     img(src="../../images/thumb_img.jpg", alt="")
-                                                .thumb-text
-                                                    strong.sub-category 공연/전시
-                                                    p.txt [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링3
-                                        li
-                                            button(type="button")
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링3
+                                        li.swiper-slide
+                                            a(href="" role="button")
                                                 .thumb-img
                                                     img(src="../../images/thumb_img.jpg", alt="")
-                                                .thumb-text
-                                                    strong.sub-category 공연/전시
-                                                    p.txt [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링4
-                                        li
-                                            button(type="button")
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링4
+                                        li.swiper-slide
+                                            a(href="" role="button")
                                                 .thumb-img
                                                     img(src="../../images/thumb_img.jpg", alt="")
-                                                .thumb-text
-                                                    strong.sub-category 공연/전시
-                                                    p.txt [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링5
-                                    .swiper-button-prev
-                                    .swiper-button-next
-                                    .swiper-pagination
-                                    
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링5
+                                        li.swiper-slide
+                                            a(href="" role="button")
+                                                .thumb-img
+                                                    img(src="../../images/thumb_img.jpg", alt="")
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링6
+                                        li.swiper-slide
+                                            a(href="" role="button")
+                                                .thumb-img
+                                                    img(src="../../images/thumb_img.jpg", alt="")
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링3
+                                        li.swiper-slide
+                                            a(href="" role="button")
+                                                .thumb-img
+                                                    img(src="../../images/thumb_img.jpg", alt="")
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링4
+                                        li.swiper-slide
+                                            a(href="" role="button")
+                                                .thumb-img
+                                                    img(src="../../images/thumb_img.jpg", alt="")
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링5
+                                        li.swiper-slide
+                                            a(href="" role="button")
+                                                .thumb-img
+                                                    img(src="../../images/thumb_img.jpg", alt="")
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링2
+                                        li.swiper-slide
+                                            a(href="" role="button")
+                                                .thumb-img
+                                                    img(src="../../images/thumb_img.jpg", alt="")
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링7
+                                        li.swiper-slide
+                                            a(href="" role="button")
+                                                .thumb-img
+                                                    img(src="../../images/thumb_img.jpg", alt="")
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링4
+                                        li.swiper-slide
+                                            a(href="" role="button")
+                                                .thumb-img
+                                                    img(src="../../images/thumb_img.jpg", alt="")
+                                            .thumb-text
+                                                strong.sub-category 공연/전시
+                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링5
+                                    .swiper-button-area
+                                        .swiper-button-prev
+                                        .swiper-button-next
+                                        .swiper-pagination
+
                 section.slide-contents
                     .section-inner
-                        h3.title-h3
+                        h3.title-h4
                             a(href="#") 문화영상
                                 i.ico(aria-hidden="true")
-                        .slide-area.swiper-container(data-slide-type="culture")
+                        .slide-area.swiper-container.slide-culture(data-slide-type="culture")
                             .swiper-wrapper
                                 .swiper-slide
                                     a(href="")
                                         span.thumb-img
-                                            img(src="", alt="")
-                                            i.ico(aria-hidden="true")
+                                            img(src="../../images/thumb_img.jpg", alt="")
+                                            i.ico-play(aria-hidden="true")
                                         ul.category
                                             li
                                                 span.txt 생활
                                             li
                                                 span.txt 서울
-                                        p.txt ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                        p.txt.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ... ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                         p.sub-txt 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
                                 .swiper-slide
                                     a(href="")
                                         span.thumb-img
-                                            img(src="", alt="")
-                                            i.ico(aria-hidden="true")
+                                            img(src="../../images/thumb_img.jpg", alt="")
+                                            i.ico-play(aria-hidden="true")
                                         ul.category
                                             li
                                                 span.txt 생활
                                             li
                                                 span.txt 서울
-                                        p.txt ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                        p.txt.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ... ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                         p.sub-txt 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
                                 .swiper-slide
                                     a(href="")
                                         span.thumb-img
-                                            img(src="", alt="")
-                                            i.ico(aria-hidden="true")
+                                            img(src="../../images/thumb_img.jpg", alt="")
+                                            i.ico-play(aria-hidden="true")
                                         ul.category
                                             li
                                                 span.txt 생활
                                             li
                                                 span.txt 서울
-                                        p.txt ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                        p.txt.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ... ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                         p.sub-txt 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                            .swiper-pager-area
+                                .swiper-slide
+                                    a(href="")
+                                        span.thumb-img
+                                            img(src="../../images/thumb_img.jpg", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.category
+                                            li
+                                                span.txt 생활
+                                            li
+                                                span.txt 서울
+                                        p.txt.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ... ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                        p.sub-txt 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                .swiper-slide
+                                    a(href="")
+                                        span.thumb-img
+                                            img(src="../../images/thumb_img.jpg", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.category
+                                            li
+                                                span.txt 생활
+                                            li
+                                                span.txt 서울
+                                        p.txt.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ... ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                        p.sub-txt 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                .swiper-slide
+                                    a(href="")
+                                        span.thumb-img
+                                            img(src="../../images/thumb_img.jpg", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.category
+                                            li
+                                                span.txt 생활
+                                            li
+                                                span.txt 서울
+                                        p.txt.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ... ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                        p.sub-txt 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                            .swiper-button-area
                                 .swiper-button-prev
                                 .swiper-button-next 
                                 .swiper-pagination
+
+block append script
+    script.
+        // UI 확인용 Swiper
+        
+        let swiper =  new Swiper('.thumbnail-area', {
+            slidesPerView: 1,
+            slidesPerColumn: 5,
+            slidesPerGroup :1,
+            loopFillGroupWithBlank : true,
+            spaceBetween:16,
+            watchOverflow:true,
+            navigation: {
+                nextEl: '.swiper-button-area .swiper-button-next',
+                prevEl: '.swiper-button-area .swiper-button-prev',
+            },
+            pagination: {
+                el: '.swiper-button-area .swiper-pagination',
+                type: 'fraction',
+            },
+            a11y : {
+                enabeld: true
+            }
+        });
+        
+        let swiperCulture = new Swiper('.slide-culture', {
+            slidesPerView:4
+        })
