--- a/dev/css/common.scss
+++ b/dev/css/common.scss
@@ -35,3 +35,19 @@
     @include rem(width, 1280px);
     margin:0 auto;
 }
+
+//텍스트 말줄임
+.ellipsis {
+    // width: 각 요소에 적용
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+
+    &.type02 {
+        -webkit-line-clamp: 2;
+    }
+    &.type03 {
+        -webkit-line-clamp: 3;
+    }
+  }
