--- a/dev/html/culturetv/mainList.pug
+++ b/dev/html/culturetv/mainList.pug
@@ -204,7 +204,7 @@ block contents
 block append script
     script.
         // UI 확인용 Swiper
-        
+
         let swiper =  new Swiper('.thumbnail-area', {
             slidesPerView: 1,
             slidesPerColumn: 5,
@@ -225,6 +225,7 @@ block append script
             }
         });
         
+        //문화영상
         let swiperCulture = new Swiper('.slide-culture', {
             slidesPerView:4
         })
