집콕+집밖 작업중

--- a/dev/css/common.scss
+++ b/dev/css/common.scss
@@ -33,7 +33,8 @@
 }
 
 .section-inner {
-    @include rem(width, 1280px);
+    @include rem(max-width, 1280px);
+    width: 100%;
     margin:0 auto;
 }
 
