--- a/dev/css/_kya.scss
+++ b/dev/css/_kya.scss
@@ -1,41 +1,49 @@
 @charset "utf-8";
+
+// 공통
+.title-h4 {
+    text-align: center;
+}
  
 
+//집콕+집밖
 .ico-housein {
-    width: 60px;
-    height: 60px;
+    @include rem(width, 60px);
+    @include rem(height, 60px);
     background:url('/images/home/ico_house_in.png') center/contain;
 }
 .ico-houseout {
-    width: 60px;
-    height: 60px;
+    @include rem(width, 60px);
+    @include rem(height, 60px);
     background:url('/images/home/ico_house_out.png') center/contain;
 }
 
-.section-inner {
-    max-width: 1280px;
-    margin: 0 auto;
-    // padding: 0 50px;
-}
-
 .intro-home {
-    height: 254px;
+    @include rem(height, 254px);
     background:url('/images/home/img_banner_home.jpg') center/cover;
 }
 
 .title-area {
     text-align: center;
-    margin-bottom: 32px;
+    @include rem(margin-bottom, 32px);
 
     .title-h2 {
-        font-size: 32px;
+        @include rem(font-size, 32px);
         font-weight: bold;
         color: #222;
     }
 }
 
 .main-home {
-    padding: 52px 0 80px;
+    @include rem(padding, 52px 0 80px);
+    &::after {
+        content:'';
+        display: block;
+        width:100%;
+        @include rem(height, 15px);
+        @include rem(margin-top, 80px);
+        background-color: #f5f5f5;
+    }
 }
 
 .main-home-swiper {
@@ -57,8 +65,8 @@
 
     .thumb-category {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        @include rem(top, 10px);
+        @include rem(right, 10px);
     }
 
     .thumb-btn {
@@ -69,13 +77,13 @@
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 48px;
+        @include rem(height, 48px);
         border: solid 1px #eee;
         background-color: #222;
         text-align: center;
 
         .txt {
-            font-size: 16px;
+            @include rem(font-size, 16px);
             font-weight: bold;
             color: #fff;
         }
@@ -84,25 +92,26 @@
     .box-tag {
         display: flex;
         flex-wrap: wrap;
-        margin-top: 16px;
+        @include rem(margin-top, 16px);
     }
 
     .tag{
         display:inline-flex;
         align-items: center;
         background-color:#f8f8f8;
-        height: 27px;
-        padding: 0 12px;
-        border-radius: 13.5px;
-        margin-right: 8px;
+        @include rem(height, 27px);
+        @include rem(padding, 0 12px);
+        @include rem(border-radius, 13.5px);
+        @include rem(margin-right, 8px);
 
         &:last-child {
             margin: 0;
         }
 
         .txt{
-            font-size: 13px;
+            @include rem(font-size, 13px);
         }
+
         &.type01{
             background-color:#fff;
             border: solid 1px #222;
@@ -111,27 +120,27 @@
     }
 
     .box-txt {
-        margin-top: 8px;
+        @include rem(margin-top, 8px);
 
         .txt-tit {
             display: block;
-            font-size: 20px;
+            @include rem(font-size, 20px);
             color: #222;
             line-height: 1.5;
-            margin-bottom: 16px;
-            height: 59px;
+            @include rem(margin-bottom, 16px);
+            @include rem(height, 59px);
 
             width: 100%;
             text-overflow: ellipsis;
             overflow: hidden;
             word-break: break-word;
             display: -webkit-box;
-            -webkit-line-clamp: 2; // 원하는 라인수
+            -webkit-line-clamp: 2;
             -webkit-box-orient: vertical
         }
 
         .txt-desc {
-            font-size: 14px;
+            @include rem(font-size, 14px);
             color: #999;
             line-height: 1.42;
 
@@ -140,12 +149,12 @@
             overflow: hidden;
             word-break: break-word;
             display: -webkit-box;
-            -webkit-line-clamp: 2; // 원하는 라인수
+            -webkit-line-clamp: 2;
             -webkit-box-orient: vertical
         }
 
         .txt-data {
-            font-size: 14px;
+            @include rem(font-size, 14px);
             color: #999;
             line-height: 1.42;
             
@@ -153,12 +162,12 @@
             flex-wrap: wrap;
 
             .data-term {
-                width: 70px;
+                @include rem(width, 70px);
             }
 
             .data-desc {
-                width: calc(100% - 70px);
-                margin-bottom: 4px;
+                width: calc(100% - 7rem);
+                @include rem(margin-bottom, 4px);
 
                 &:last-child {
                     margin-bottom: 0;
@@ -168,45 +177,102 @@
     }
 }
 
+.tab-buttons {
+    .tab-wrap {
+        display: flex;
+        align-items: flex-end;
+    }
+
+    .tab-btn {
+        display: block;
+        flex: 1;
+        @include rem(height, 64px);
+        background: #e8e7e8;
+        border-bottom: 1px solid #444344;
+
+        &.on {
+            @include rem(height, 86);
+            background: #fff;
+            border: 1px solid #444344;
+            border-bottom: 0;
+        }
+    }
+}
+
+.tab-contents {
+    display: none;
+
+    &.on {
+        display: block;
+    }
+}
+
+
+.type-home {
+    &.slide-contents .thumb-img {
+        @include rem(width, 180px);
+        @include rem(height, 254px);
+    }
+    
+    &.slide-contents p.txt {
+        width: auto;
+        @include rem(font-size, 16px);
+        @include rem(height, 48px);
+    }
+    
+    &.slide-contents p.sub-txt {
+        width: auto;
+        @include rem(font-size, 13px);
+    }
+
+    &.slide-contents .category .txt {
+        @include rem(font-size, 10px);
+        @include rem(padding, 4px 8px);
+        line-height: 1;
+    }
+    
+}
+
+
 
 @media (max-width:1024px){
     .title-area .title-h2 {
-        font-size: 24px;
+        @include rem(font-size, 24);
     }
 
     .main-home-swiper {
         [class^="ico-"] {
-            width: 48px;
-            height: 48px;
+            @include rem(width, 48px);
+            @include rem(height, 48px);
         }
 
         .swiper-container {
-            padding: 0 23px;
+            @include rem(padding, 0 23px);
         }
 
         .swiper-slide {
-            width: 152px;
+            @include rem(width, 152px);
         }
     }
 
     .main-home-swiper .tag {
-        height: 23px;
-        padding: 8px;
-        margin-right: 4px;
+        @include rem(height, 23px);
+        @include rem(padding, 8px);
+        @include rem(margin-right, 4px);
     }
     .main-home-swiper .tag .txt {
-        font-size: 10px;
+        @include rem(font-size, 10px);
     }
 
     .main-home-swiper .box-txt .txt-tit {
-        font-size: 16px;
-        height: 48px;
+        @include rem(font-size, 16px);
+        @include rem(height, 48px);
     }
     .main-home-swiper .box-txt .txt-desc {
-        font-size: 12px;
+        @include rem(font-size, 12px);
     }
     .main-home-swiper .box-txt .txt-data {
-        font-size: 12px;
+        @include rem(font-size, 12px);
     }
 
     
