--- a/dev/css/oneEye.scss
+++ b/dev/css/oneEye.scss
@@ -1,3 +1,8 @@
 @charset "utf-8";
 
+$global-font-size : 10px;
+
+
+@import '../css/common.scss';
+@import '../css/_ksc.scss';
 @import '../css/_kya.scss';
