prototype.scss 추가 / _ksc 수정

--- a/dev/_src/_pug/_extend_html5.pug
+++ b/dev/_src/_pug/_extend_html5.pug
@@ -52,6 +52,7 @@ html(class=`${htmlClass}`, lang=`${language}`)
                 link(href=`${pathSettingHtml}css_partials/componentlist.css`, type='text/css', rel='stylesheet')
                 link(href=`${pathSettingHtml}css_partials/header.css`, type='text/css', rel='stylesheet')
                 link(href=`${pathSettingHtml}css_partials/footer.css`, type='text/css', rel='stylesheet')
+                link(href=`${pathSettingHtml}css/prototype.css`, type='text/css', rel='stylesheet')
             //- build
             else
                 link(href=`${pathSettingHtml}css/common.css`, type='text/css', rel='stylesheet')
