reset rem 수치 조절

--- a/dev/html/oneeye/oneEyeList.pug
+++ b/dev/html/oneeye/oneEyeList.pug
@@ -13,32 +13,22 @@ block contents
                             li
                                 a(href="#") 홈
                             li
-                                a(href="#") 문화공감
+                                a(href="#") 문화체험
                             li
-                                a(href="#") 문화TV
-                            li
-                                a.on(href="#") 공감리포트
+                                a.on(href="#") 한 눈에 보는 문화정보
                     .share-area
                         ul.share-content
                             li
                                 a.link-share(href="#")
                             li
                                 a.link-print(href="#")
-                section.visual-top
+                section.section-main
                     .section-inner
                         .title-area
                             h1.title-h1 한눈에 보는 문화정보
                                 |
                                 span.txt 일상문화의 시대, 공연/전시/축제 등 다채로운 문화정보를 찾아보세요.
-
-                        .visual-area
-                            .visual-content-box
-                                .video 비디오 컨텐츠 영역
-                            .visual-text-box
-                                h3.title-h3 [정부위원회 246개 통폐합···40% 가까이 정비 [뉴스의 맥]
-                                p.sub-txt 김용민 앵커 > 앞서 국무회의 소식 전해드렸는데요. 국무회의 주요 안건을 취재기자와 자세히 알아보겠습니다. 임소형 기자 나와있습니다. 윤 대통령이 정부세종청사에서 국무회의를 주재한 건 이번이 두 번째였는데요. 어떤 안건들이 다뤄졌습니까. …
-                                dl.info
-                                    dt 출처
-                                    dd 한국정책방송원
-                section.life-section
+                
+                section.section-search
                     .section-inner
+                        p 검색영역
